Revision history for Perl module JSON::Tiny

0.51 2015-01-24
  - Document why '/' is escaped.
  - Add from_json and to_json functions.
  - Deprecate Object-Oriented API.

0.50 2014-08-05
  - Whitespace parsing simplification/optimization.

0.49 2014-05-18
  - Fix regression: $j->encode({a=>undef}) threw exception.

0.48 2014-05-17
  - Mini-optimization in number detection code.

0.47 2014-05-13
  - Number detection heuristics better match user expectations.

0.46 2014-03-06
  - POD revisions.
  - Tighten 'examples/*', &error, tests.

0.45 2014-03-05
  - Streamline POD.

0.44 2014-03-05
  - Established RFC7159 compliance.
  - De-deprecate &j but document its limitations.

0.43 2014-03-03
  - Slim the dist.
  - Deprecate &j: Ambiguities with RFC7159.

0.42 2014-02-20
  - Document die on failure for &j.
  - More tests.
  - u007f isn't mentioned in RFC4627.
  - Adapt Mojo::JSON updates.
  - Eradicate //.
  - Cleaner examples.

0.41 2014-02-19
  - ADD decode_json and encode_json functions.
  - Fix decoding error.
  - Mini-optimizations.
  - Handle encoding errors better.
  - Fix line numbers in error messages.
  - Test all decoding errors.

0.40 2014-01-16
  - Mini-optimization: &encode.
  - Linkify RFC mention in POD.
  - Fixed bug with PREREQ_PM hashref.

0.39 2013-12-04
  - POD refinements.

0.38 2013-12-03
  - ACKNOWLEDGEMENTS recognize chansen's GitHub Gist as Mojo::JSON's birth.

0.37 2013-11-21
  - Removed minimum dependency version checks in Makefile.PL.
  - POD: JSON::Tiny is not relaxed.

0.36 2013-11-08
  - Special char \b (was \x07) correctly associated with 0x08.
  - Tests for 0x07=>0x08.

0.35 2013-10-16
  - References to a scalar (even blessed) encode as Boolean types.

0.34 2013-10-15
  - Added t/22-bool.t to test Boolean override decoding behavior.
  - Documented Boolean override.

0.33 2013-10-15
  - Change 'my $TRUE', 'my $FALSE' to 'our': users can override
    Booleans. http://perlmonks.org/?node_id=1058232
  - Added META: Git repo, Meta spec versn.