@@ -75,7 +75,7 @@ sub encode { encode_json($_[1]) }
 
 sub encode_json { Encode::encode 'UTF-8', _encode_value(shift); }
 
-sub false {$FALSE}
+sub false () {$FALSE}
 
 sub from_json {
   my $err = _catch(\my $value, shift, 1);
@@ -89,7 +89,7 @@ sub j {
 
 sub to_json { _encode_value(shift) }
 
-sub true {$TRUE}
+sub true () {$TRUE}
 
 sub _catch {
   my $valueref = shift;
